<resources>
    <string name="app_name">IMDB</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster">Movie poster</string>
    <string name="contextual_menu">Contextual menu</string>
    <string name="favorite">Favorite button</string>
    <string name="rating_example">8/10</string>
    <string name="see_later">Ver despues</string>
    <string name="movies">Peliculas</string>
    <string name="details">Detalle</string>
    <string name="search_movie">Busca una peli</string>
    <string name="to_see_later">Para ver después</string>
    <string name="remove_from_see_later">Quitar de la lista de ver mas tarde</string>
    <string name="add_from_see_later">ver mas tarde</string>
    <string name="my_favorites">Mis pelis favoritas</string>
    <string name="favorites">Favoritas</string>
</resources>