<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_movies">


    <fragment
        android:id="@+id/nav_movies"
        android:name="com.example.imdb.movies.ui.fragments.MovieListFragment"
        android:label="@string/movies">
        <action
            android:id="@+id/action_movieListFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="com.example.imdb.movies.ui.fragments.MovieDetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_movie_details">
        <argument
            android:name="movieJson"
            android:defaultValue=""
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_see_later"
        android:name="com.example.imdb.movies.ui.fragments.SeeLaterMoviesFragment"
        android:label="@string/to_see_later">
        <action
            android:id="@+id/action_seeLaterMoviesFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment" />
    </fragment>

</navigation>