<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="movie"
            type="com.example.imdb.movies.shared.Movie" />

        <variable
            name="onClickMovie"
            type="com.example.imdb.movies.ui.fragments.adapter.IOnMovieClickListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:onClick="@{() -> onClickMovie.movieClicked(movie)}"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/moviePoster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/poster"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:setMoviePoster="@{movie.poster}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/movie_footer"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="@dimen/standard_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text="@{movie.title}"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <TextView
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|end"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:setDouble="@{movie.voteAverage}" />

                        <ImageButton
                            android:id="@+id/imageFavorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_ripple_effect"
                            android:contentDescription="@string/favorite"
                            android:padding="@dimen/fab_margin"
                            android:src="@drawable/ic_baseline_favorite_disabled_24"
                            app:isFavorite="@{movie.favorite}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="bottom|end"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/moreButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_ripple_effect"
                        android:contentDescription="@string/contextual_menu"
                        android:padding="@dimen/fab_margin"
                        android:src="@drawable/ic_baseline_more_vert_24" />

                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
