<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.imdb.movies.viewModel.MovieDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".movies.ui.fragments.MovieDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/moviePosterContainer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/drop_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/moviePoster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:setMoviePoster="@{viewModel.movie.poster}" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/movie_footer"
                android:padding="@dimen/standard_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@{viewModel.movie.title}"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/movieAverage"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/movieAverage"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:setDouble="@{viewModel.movie.voteAverage}" />

                <ImageButton
                    android:id="@+id/imageFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ripple_effect"
                    android:contentDescription="@string/favorite"
                    android:src="@drawable/ic_baseline_favorite_disabled_24"
                    android:visibility="invisible"
                    app:isFavorite="@{viewModel.movie.favorite}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/moreButton" />

                <ImageButton
                    android:id="@+id/moreButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ripple_effect"
                    android:contentDescription="@string/contextual_menu"
                    android:src="@drawable/ic_baseline_more_vert_24"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/votes_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moviePosterContainer">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:layout_weight="1"
                android:padding="@dimen/standard_margin"
                app:cardCornerRadius="@dimen/card_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:gravity="center_horizontal"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@{viewModel.movie.releaseDate}" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/card_radius"
                android:padding="@dimen/standard_margin"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:gravity="center_horizontal"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        app:setDouble="@{viewModel.movie.voteAverage}" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/movieOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/movie_detail_top_text"
            android:text="@{viewModel.movie.overview}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/votes_container" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>